project('steptasinterface','cs')
sources=[
'ActiveSide.cs',
'AxisPlacement.cs',
'AxisRotation.cs',
'AxisTransformation.cs',
'AxisTransformationSequence.cs',
'AxisTranslation.cs',
'BoundedSurface.cs',
'Cone.cs',
'Cylinder.cs',
'DataNode.cs',
'DataStatus.cs',
'Direction.cs',
'Disc.cs',
'Face.cs',
'FileData.cs',
'FileHeader.cs',
'Geometry.cs',
'NodeType.cs',
'Material.cs',
'TasNode.cs',
'Paraboloid.cs',
'Point3D.cs',
'Quadrilateral.cs',
'Rectangle.cs',
'Side.cs',
'Sphere.cs',
'steptasinterface.cs',
'steptasinterfacePINVOKE.cs',
#'SWIGTYPE_p_namespace.cs',
#'SWIGTYPE_p_std__string.cs',
'SWIGTYPE_p_std__vectorT_sti__AxisTransformation_t.cs',
#'SWIGTYPE_p_std__vectorT_sti__Node_p_t.cs',
#'SwigHelper.cs',
'ThermalMaterialProperties.cs',
'ThermalNode.cs',
'Triangle.cs'
]
shared_library('steptasinterface',sources)

